# docassemble-SmallClClaimAndAffidavit

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: code_checks  code_checks.yml
docassemble/MichiganSmallClaimsAndAffidavitInterview/data/questions/: final__dc_84_affidavit_and_claim_sm.yml
docassemble/MichiganSmallClaimsAndAffidavitInterview/data/templates/: small_claims_checklist.docx
docassemble/SmallClClaimAndAffidavit/: github_server.yml
docassemble/SmallClClaimAndAffidavit/data/questions/: final__dc_84_affidavit_and_claim_sm.yml  review.yml
docassemble/SmallClClaimAndAffidavit/data/sources/: interview_test.feature
docassemble/SmallClClaimAndAffidavit/data/templates/: claim_affidavit_Addendum.docx  small_claims_checklist.docx  ~$aim_affidavit_Addendum.docx
