[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.SmallClClaimAndAffidavit"
version = "1.1.2"
description = "Small Claims Affidavit and Claim"
readme = "README.md"
authors = [
    { name = "Emily Miller", email = "ekressmiller@lsscm.org" },
]
dependencies = [
    "docassemble.ALAnyState @ git+https://github.com/SuffolkLITLab/docassemble-ALAnyState.git@main",
    "docassemble.AssemblyLine @ git+https://github.com/SuffolkLITLab/docassemble-AssemblyLine.git@main",
]

[project.urls]
Homepage = "https://courtformsonline.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
